attached_assets/Pasted--Compiling-rand-v0-8-5-error-E0282-type-annotations-nee_1778559383245.txt

   Compiling rand v0.8.5
error[E0282]: type annotations needed
  --> /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/time-0.3.34/src/format_description/parse/mod.rs:84:28
   |
84 |         .map(|res| res.map(Into::into))
   |                            ^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the trait `Into`
   |
help: consider specifying the generic argument
   |
84 |         .map(|res| res.map(Into::<T>::into))
   |                                +++++

   Compiling itertools v0.12.1
   Compiling yuck v0.1.0 (/tmp/tmp.Fx9z8B7i71/eww/crates/yuck)
error[E0283]: type annotations needed
   --> /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/time-0.3.34/src/format_description/parse/mod.rs:86:14
    |
 86 |     Ok(items.into())
    |              ^^^^
    |
note: multiple `impl`s satisfying `OwnedFormatItem: From<Vec<_>>` found
   --> /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/time-0.3.34/src/format_description/owned_format_item.rs:81:1
    |
 81 | impl From<Vec<FormatItem<'_>>> for OwnedFormatItem {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
120 | impl From<Vec<Self>> for OwnedFormatItem {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: required for `Vec<_>` to implement `Into<OwnedFormatItem>`
help: try using a fully qualified path to specify the expected types
    |
 86 -     Ok(items.into())
 86 +     Ok(<Vec<_> as Into<OwnedFormatItem>>::into(items))
    |

   Compiling tokio v1.36.0
   Compiling phf v0.10.1
   Compiling derivative v2.2.0
   Compiling futures-util v0.3.28
   Compiling clap_derive v4.5.0
   Compiling async-recursion v1.0.4
   Compiling serde_repr v0.1.16
Some errors have detailed explanations: E0282, E0283.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `time` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
[customize_airootfs] FATAL: eww v0.6.0 build failed.
[customize_airootfs] waybar has been removed; the ISO would ship without any bar.
[customize_airootfs] Override NYXUS_EWW_TAG or fix the build before re-running mkarchiso.

...xXx... nyxus/iso-builder  main $✘!?  2m58s
❯ tail -100  bake.log                                                                    00:15:18
  Downloaded enumflags2_derive v0.7.7
  Downloaded cc v1.0.82
  Downloaded gobject-sys v0.17.10
  Downloaded slab v0.4.8
  Downloaded signal-hook-registry v1.4.1
  Downloaded rand_chacha v0.3.1
  Downloaded ena v0.14.2
  Downloaded string_cache v0.8.7
  Downloaded log v0.4.20
  Downloaded cfg-if v1.0.0
  Downloaded equivalent v1.0.1
  Downloaded fixedbitset v0.4.2
  Downloaded scopeguard v1.2.0
  Downloaded windows-targets v0.48.2
  Downloaded static_assertions v1.1.0
  Downloaded strum_macros v0.26.1
  Downloaded windows v0.52.0
  Downloaded windows v0.48.0
[customize_airootfs] step 2/5: warm-up build (failure expected at time-0.3.34)...
[customize_airootfs] step 3/5: patching time-0.3.34...
[customize_airootfs] patched /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/time-0.3.34/src/format_description/parse/mod.rs for E0282 (Vec<_> + collect::<Result<_, _>>)
[customize_airootfs] step 4/5: verifying patch...
[customize_airootfs] step 5/5: final build...
   Compiling serde_derive v1.0.197
   Compiling thiserror-impl v1.0.46
   Compiling futures-macro v0.3.28
   Compiling regex v1.10.3
   Compiling darling_macro v0.14.4
   Compiling enumflags2_derive v0.7.7
   Compiling chrono-tz v0.8.3
   Compiling ref-cast-impl v1.0.22
   Compiling tokio-macros v2.2.0
   Compiling time v0.3.34
   Compiling derive_more v0.99.17
   Compiling phf_macros v0.10.0
   Compiling strum_macros v0.26.1
   Compiling simplexpr v0.1.0 (/tmp/tmp.Fx9z8B7i71/eww/crates/simplexpr)
   Compiling tracing-attributes v0.1.26
   Compiling clap_lex v0.7.0
   Compiling sha1 v0.10.5
   Compiling async-broadcast v0.5.1
   Compiling indexmap v1.9.3
   Compiling lasso v0.6.0
   Compiling clap_builder v4.5.1
   Compiling darling v0.14.4
   Compiling cached_proc_macro v0.19.1
   Compiling xdg-home v1.0.0
   Compiling rayon-core v1.12.1
   Compiling ref-cast v1.0.22
   Compiling async-trait v0.1.73
   Compiling is-terminal v0.4.9
   Compiling rand v0.8.5
error[E0282]: type annotations needed
  --> /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/time-0.3.34/src/format_description/parse/mod.rs:84:28
   |
84 |         .map(|res| res.map(Into::into))
   |                            ^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the trait `Into`
   |
help: consider specifying the generic argument
   |
84 |         .map(|res| res.map(Into::<T>::into))
   |                                +++++

   Compiling itertools v0.12.1
   Compiling yuck v0.1.0 (/tmp/tmp.Fx9z8B7i71/eww/crates/yuck)
error[E0283]: type annotations needed
   --> /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/time-0.3.34/src/format_description/parse/mod.rs:86:14
    |
 86 |     Ok(items.into())
    |              ^^^^
    |
note: multiple `impl`s satisfying `OwnedFormatItem: From<Vec<_>>` found
   --> /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/time-0.3.34/src/format_description/owned_format_item.rs:81:1
    |
 81 | impl From<Vec<FormatItem<'_>>> for OwnedFormatItem {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
120 | impl From<Vec<Self>> for OwnedFormatItem {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: required for `Vec<_>` to implement `Into<OwnedFormatItem>`
help: try using a fully qualified path to specify the expected types
    |
 86 -     Ok(items.into())
 86 +     Ok(<Vec<_> as Into<OwnedFormatItem>>::into(items))
    |

   Compiling tokio v1.36.0
   Compiling phf v0.10.1
   Compiling derivative v2.2.0
   Compiling futures-util v0.3.28
   Compiling clap_derive v4.5.0
   Compiling async-recursion v1.0.4
   Compiling serde_repr v0.1.16
Some errors have detailed explanations: E0282, E0283.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `time` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
[customize_airootfs] FATAL: eww v0.6.0 build failed.
[customize_airootfs] waybar has been removed; the ISO would ship without any bar.
[customize_airootfs] Override NYXUS_EWW_TAG or fix the build before re-running mkarchiso.

...xXx... nyxus/iso-builder  main $✘!?
❯                                              